2013-10-18  Carlos O'Donell  <carlos@redhat.com>

	* manual/crypt.texi (Cryptographic Functions): Using SunRPC and
	AUTH_DES will prevent FIPS 140-2 compliance. Add vindex for
	AUTH_DES and cindex for FIPS 140-2.
	(DES Encryption): Add cindex FIPS 46-3.

	* locale/locarchive.h (struct locarhandle): Add fname.
	* locale/programs/localedef.c (main): Pass ARGV[remaining]
	if an optional argument was specified to --list-archive,
	otherwise NULL.
	* locale/programs/locarchive.c (show_archive_content): Take new
	argument fname and pass it via ah.fname to open_archive.
	* locale/programs/localedef.h: Update decl.
	(open_archive): If AH->fname is non-null, open that file
	rather than the default file name, and don't ignore ENOENT.
	(create_archive): Set AH.fname to NULL.
	(delete_locales_from_archive): Likewise.
	(add_locales_to_archive): Likewise.
	* locale/programs/locfile.c (write_all_categories): Likewise.

2013-10-18  Joseph Myers  <joseph@codesourcery.com>
	    Aldy Hernandez  <aldyh@redhat.com>

	* sysdeps/powerpc/powerpc32/e500/nofpu/Makefile: New file.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fclrexcpt.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fe_note_change.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fedisblxcpt.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/feenablxcpt.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fegetenv.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fegetexcept.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fegetround.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/feholdexcpt.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fenv_const.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fenv_libc.h: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fesetenv.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fesetround.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/feupdateenv.c: Likewise.
	* sysdeps/powerpc/powerpc32/e500/nofpu/fexcepts_from_prctl.c:
	Likewise.